--- a/views/corgi.ejs
+++ b/views/corgi.ejs
@@ -1,7 +1,7 @@
-<%- include("templates/header") %> 
+<%- include("templates/header") %>
 <% if (session.authenticated) { %>
   <div class="container">
-  <h3>Hey, <%= session.name %>. Enjoy the corgis!<h3>
+  <h3>Hey, <%= session.name %><h3>
   <br>
   <div class="container">
     <div class="row">
