made headers dynamic

--- a/views/corgi.ejs
+++ b/views/corgi.ejs
@@ -17,7 +17,7 @@
     </div>
   </div>
   
-  <form action='/signout' method='get'><button>Sign Out</button><br></form>
+  <form action='/logout' method='get'><button>Sign Out</button><br></form>
 </div>
 <% } else {res.redirect('/')} %>
 <%- include("templates/footer") %>
