--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -38,7 +38,7 @@
         ></path>
       </symbol>
     </svg>
-    <header class="p-3 text-bg-dark">
+    <header class="p-3 text-bg-primary">
       <div class="container">
         <div
           class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start"
@@ -61,16 +61,15 @@
           <ul
             class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0"
           >
-            <li><a href="#" class="nav-link px-2 text-danger">Home</a></li>
-            <li>
-              <a href="/about" class="nav-link px-2 text-danger">About</a>
-            </li>
+          <% for (var i = 0; i < locals.navLinks.length; i++) { %>
+            <li><a href="<%= locals.navLinks[i].link %>" class="nav-link <% if (locals.navLinks[i].link == locals.currentURL) { %>active<%} %> px-2 text-primary"><%= locals.navLinks[i].name %></a></li>
+            <% } %>
           </ul>
 
           <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
             <input
               type="search"
-              class="form-control form-control-dark text-bg-dark"
+              class="form-control form-control-dark text-bg-primary"
               placeholder="Search..."
               aria-label="Search"
             />
@@ -78,3 +77,5 @@
         </div>
       </div>
     </header>
+  </body>
+</html>
