--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -62,18 +62,9 @@
             class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0"
           >
           <% for (var i = 0; i < locals.navLinks.length; i++) { %>
-            <li><a href="<%= locals.navLinks[i].link %>" class="nav-link <% if (locals.navLinks[i].link == locals.currentURL) { %>active<%} %> px-2 text-primary"><%= locals.navLinks[i].name %></a></li>
+            <li><a href="<%= locals.navLinks[i].link %>" class="nav-link <% if (locals.navLinks[i].link == locals.currentURL) { %> active <% } %>"><%= locals.navLinks[i].name %></a></li>
             <% } %>
           </ul>
-
-          <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-            <input
-              type="search"
-              class="form-control form-control-dark text-bg-primary"
-              placeholder="Search..."
-              aria-label="Search"
-            />
-          </form>
         </div>
       </div>
     </header>
